# heimsnet-bot

./: .gitignore  .replit  config.example.yaml  pyproject.toml  requirements.txt
heimsnet_bot/: config.py  main.py  ping.py  util.py
src/: bot.py  main.py
