[tool.poetry]
name = "heimsnet-bot"
version = "0.0.1"
private = true
description = ""
include = [{"name" = "heimsnet_bot"}]
authors = ["Theo Paris <theo@firenodes.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
confuse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = "heimsnet_bot.main:main"